# VoiceAssistant

./: .env.example  .gitignore  Makefile  README.md  audio_test_simple.html  check_setup.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  start.bat  start.sh  test_websocket.html  voice_test.html
config/: development.yaml  example.yaml  production.yaml  staging.yaml  testing.yaml
docker/: .dockerignore  DOCKER_QUICK_START.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: API_INTEGRATION_COMPLETE.md  APPLICATION_RUNNING.md  COMPLETE_SETUP_GUIDE.md  HOW_TO_RUN.md  HOW_TO_SPEAK.md  OPENROUTER_MIGRATION.md  PROJECT_ORGANIZATION.md  QUICKSTART.md  QUICKSTART_LOCAL.md  QUICK_REFERENCE.md  QUICK_START_MANUAL.md  RUNNING_LOCALLY.md  RUN_INSTRUCTIONS.md  SETUP_GUIDE.md  SETUP_OPTIONS.md  SOLUTION_LOCAL_LLM.md  UI_FIX_COMPLETE.md  WAV2VEC2_MIGRATION.md  WEBSOCKET_TESTING.md  api.md  architecture.md  asr_service.md  configuration.md  event_pipeline_architecture.md  health_system.md  logging_system.md  metrics_dashboard.md  production_architecture.md  reasoning_service.md  replay_system.md  resilience_patterns.md  running_the_application.md  session_management.md  session_recording.md  troubleshooting.md  tts_service.md  websocket_server.md
docs/archive/: COMPLETE_ARCHITECTURE.md  FINAL_STRUCTURE.md  LOGGING_DEMO_SUMMARY.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_QUICK_START.md  MAIN_PY_APPLICATION_RNTRY_POINT_SUMMARY.md  ORIGINAL_PROJECT_BRIEF.md  PROJECT_STRUCTURE.md  PYTHON_CLIENT_SUMMARY.md  README.md  README_RESTRUCTURING.md  REASONINGSERVICE_SUMMARY.md  RESTRUCTURING_COMPLETE.md  RESTRUCTURING_GUIDE.md  TEST_RESTRUCTURING_COMPLETE.md  TTS_SERVICE_SUMMARY.md  UTILS_PACKAGE_IMPLEMENTATION.md  UTILS_QUICK_REFERENCE.md
examples/: README.md  logging_example.py  metrics_dashboard_example.py  requirements.txt  test_client_protocol.py  voice_client.py
scripts/: README.md  test_logging_demo.py  update_imports.py  update_logging_imports.py  update_test_imports.py  view_logs.py
src/: __init__.py  main.py
src/api/: __init__.py  health_server.py  websocket.py
src/core/: __init__.py  events.py  models.py
src/infrastructure/: __init__.py  config.py
src/infrastructure/resilience/: __init__.py  circuit_breaker.py  retry.py  timeout.py
src/observability/: __init__.py  health.py  latency.py  metrics.py
src/services/: __init__.py
src/services/asr/: __init__.py  service.py
src/services/llm/: __init__.py  service.py
src/services/tts/: __init__.py  service.py
src/session/: __init__.py  manager.py  recorder.py  replay.py
src/utils/: README.md  __init__.py
src/utils/logger/: __init__.py  logger.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: test_complete_flow.py
tests/fixtures/: README.md  USAGE_GUIDE.md  __init__.py  mocks.py  test_fixtures.py  test_integration_example.py
tests/integration/: test_event_pipeline.py  test_logging_integration.py  test_main.py  test_websocket.py
tests/performance/: test_latency_budgets.py
(+21 files in other folders)
